# projects-ect

./: README.md
1st Year/: README.md
2nd Year/: README.md
[SO] SOFS - Critical components of an ext2-based filesystem/src/: CMakeLists.txt
[SO] SOFS - Critical components of an ext2-based filesystem/src/core/: binselection.cpp  exception.cpp  probing.cpp  sizes.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/dal/: dal_OC.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/direntries/: delete_direntry.cpp  get_direntry.cpp  rename_direntry.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/fileblocks/: .gitignore  CMakeLists.txt  alloc_fileblock.cpp  get_fileblock.cpp  write_fileblock.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/grp_src/grp_direntries/: grp_add_direntry.cpp  grp_check_dir_empty.cpp  grp_delete_direntry.cpp  grp_get_direntry.cpp  grp_rename_direntry.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/grp_src/grp_fileblocks/: CMakeLists.txt  grp_alloc_fileblock.cpp  grp_get_fileblock.cpp  grp_read_fileblock.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/grp_src/grp_freelists/: .gitignore  CMakeLists.txt  grp_free_inode.cpp  grp_replenish_head_cache.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/mksofs/: .gitignore  CMakeLists.txt  mksofs_FRDB.cpp  mksofs_FSB.cpp  mksofs_RFDB.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/rawdisk/: .gitignore  rawdisk.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/sofsmount/: .gitignore  sofsmount.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/syscalls/: link.cpp  mkdir.cpp  mknod.cpp  readlink.cpp  symlink.cpp  syscalls_others.cpp  truncate.cpp  unlink.cpp  write.cpp
[SO] SOFS - Critical components of an ext2-based filesystem/src/testtool/: CMakeLists.txt  testtool.cpp  testtool_direntries.cpp  testtool_freelists.cpp  testtool_inodeattrs.cpp  testtool_msgs.cpp
(+1376 files in other folders)
